automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,8 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    pass"
+    "    y_values = []\n",
+    "    "
    ]
   },
   {
