--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,8 @@
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    y_values = []\n",
-    "    "
+    "    for x in x_values:\n",
+    "        "
    ]
   },
   {
