--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -279,8 +279,7 @@
     "def m_b_data(m, b, x_values):\n",
     "    y_values = []\n",
     "    for x in x_values:\n",
-    "        y_values.append(m* x + b)\n",
-    "    return "
+    "        y_values.append(m* x + b)"
    ]
   },
   {
