automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
     "    y_values = []\n",
     "    for x in x_values:\n",
     "        y_values.append(m* x + b)\n",
-    "    return "
+    "    return {'x': x_values}"
    ]
   },
   {
