--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,14 +320,28 @@
     "    y_values = []\n",
     "    for x in x_values:\n",
     "        y_values.append(m* x + b)\n",
-    "    return {'mode': mode, 'nam''x': x_values, 'y': y_values}"
+    "    return {'mode': mode, 'name': name, 'x': x_values, 'y': y_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mode': 'line',\n",
+       " 'name': 'line function',\n",
+       " 'x': [0, 50, 100],\n",
+       " 'y': [20.0, 95.0, 170.0]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m_b_trace(1.5, 20, [0, 50, 100]) \n",
     "# {'mode': 'line', 'name': 'line function', 'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]}"
