--- a/index.ipynb
+++ b/index.ipynb
@@ -404,7 +404,7 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    y = second_show['atten']"
+    "    y = second_show['attendance'] - first_s"
    ]
   },
   {
