--- a/index.ipynb
+++ b/index.ipynb
@@ -404,7 +404,8 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    y = second_show['attendance'] - first_s"
+    "    y = second_show['attendance'] - first_show['attendance']\n",
+    "    y = second_show['attendance'] - first_show['attendance']"
    ]
   },
   {
