--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    y = second_show['attendance'] - first_show['attendance']\n",
-    "    y = second_show['attendance'] - first_show['attendance']"
+    "    x = second_show['budget'] - first_show['budget']"
    ]
   },
   {
