automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,8 @@
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    y = second_show['attendance'] - first_show['attendance']\n",
-    "    x = second_show['budget'] - first_show['budget']"
+    "    x = second_show['budget'] - first_show['budget']\n",
+    "    return y / x"
    ]
   },
   {
