--- a/index.ipynb
+++ b/index.ipynb
@@ -572,7 +572,8 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    y = y_values[-1]"
+    "    y = y_values[-1] - y_values[0]\n",
+    "    "
    ]
   },
   {
