--- a/index.ipynb
+++ b/index.ipynb
@@ -573,7 +573,7 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    y = y_values[-1] - y_values[0]\n",
-    "    "
+    "    x = x_values[-1] "
    ]
   },
   {
