--- a/index.ipynb
+++ b/index.ipynb
@@ -573,7 +573,8 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    y = y_values[-1] - y_values[0]\n",
-    "    x = x_values[-1] "
+    "    x = x_values[-1] - x_values[0]\n",
+    "    return y / x"
    ]
   },
   {
