automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -611,7 +611,8 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    if not isinstance(m, float)"
+    "    if not isinstance(m, float):\n",
+    "        m = "
    ]
   },
   {
