automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -612,7 +612,7 @@
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    if not isinstance(m, float):\n",
-    "        m = "
+    "        m = slop(x_values, y_values)"
    ]
   },
   {
