--- a/index.ipynb
+++ b/index.ipynb
@@ -612,7 +612,8 @@
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    if not isinstance(m, float):\n",
-    "        m = slop(x_values, y_values)"
+    "        m = slop(x_values, y_values)\n",
+    "    return "
    ]
   },
   {
