--- a/index.ipynb
+++ b/index.ipynb
@@ -613,7 +613,7 @@
     "def y_intercept(x_values, y_values, m = None):\n",
     "    if not isinstance(m, float):\n",
     "        m = slop(x_values, y_values)\n",
-    "    return "
+    "    return m * x"
    ]
   },
   {
