--- a/index.ipynb
+++ b/index.ipynb
@@ -673,7 +673,8 @@
    "source": [
     "def build_starting_line(x_values, y_values):\n",
     "    m = slope(x_values, y_values)\n",
-    "    b = y_intercept(x_values, y_values, )"
+    "    b = y_intercept(x_values, y_values, m)\n",
+    "    "
    ]
   },
   {
