--- a/index.ipynb
+++ b/index.ipynb
@@ -853,20 +853,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mode': 'line',\n",
+       " 'name': 'starting line',\n",
+       " 'x': [200, 400, 300, 600],\n",
+       " 'y': [400.0, 650.0, 525.0, 900.0]}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# trace_show_line"
+    "trace_show_line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "markers",
+         "name": "comedy show data",
+         "x": [
+          200,
+          400,
+          300,
+          600
+         ],
+         "y": [
+          400,
+          700,
+          500,
+          900
+         ]
+        },
+        {
+         "mode": "line",
+         "name": "starting line",
+         "x": [
+          200,
+          400,
+          300,
+          600
+         ],
+         "y": [
+          400,
+          650,
+          525,
+          900
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"2a810233-80eb-4b82-9a6c-1a2cd583dab6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2a810233-80eb-4b82-9a6c-1a2cd583dab6\", [{\"x\": [200, 400, 300, 600], \"y\": [400, 700, 500, 900], \"mode\": \"markers\", \"name\": \"comedy show data\"}, {\"mode\": \"line\", \"name\": \"starting line\", \"x\": [200, 400, 300, 600], \"y\": [400.0, 650.0, 525.0, 900.0]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"2a810233-80eb-4b82-9a6c-1a2cd583dab6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2a810233-80eb-4b82-9a6c-1a2cd583dab6\", [{\"x\": [200, 400, 300, 600], \"y\": [400, 700, 500, 900], \"mode\": \"markers\", \"name\": \"comedy show data\"}, {\"mode\": \"line\", \"name\": \"starting line\", \"x\": [200, 400, 300, 600], \"y\": [400.0, 650.0, 525.0, 900.0]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# plot([comedy_show_trace, trace_show_line])"
+    "plot([comedy_show_trace, trace_show_line])"
    ]
   },
   {
